# Noizer

./: .gitignore  LICENSE  README.md
app/: build.gradle
app/src/androidTest/java/com/application/noizer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libnoizer.cpp
app/src/main/java/com/application/noizer/: NoizerActivity.java  NoizerService.java
app/src/main/res/layout/: activity_noizer.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/application/noizer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
